[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/damagable.gd" type="Script" id=1]
[ext_resource path="res://Scripts/player_controls.gd" type="Script" id=2]
[ext_resource path="res://Abilities/ColdT1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Abilities/ChaosT1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Abilities/LightningT1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Abilities/LightningT2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Abilities/PhysicalT1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Abilities/ColdT2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Abilities/FireT1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Abilities/FireT2.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/caster.gd" type="Script" id=11]

[node name="root" type="Node2D"]

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="PlayerControls" type="Node2D" parent="Player"]
script = ExtResource( 2 )
caster = NodePath("../Caster")

[node name="Caster" type="Node2D" parent="Player"]
script = ExtResource( 11 )
enemy = NodePath("../../Enemy")
abilities = [ NodePath("../../Abilities/FireT2"), NodePath("../../Abilities/ColdT2"), NodePath("../../Abilities/LightningT2"), NodePath("../../Abilities/FireT1"), NodePath("../../Abilities/ColdT1"), NodePath("../../Abilities/LightningT1"), NodePath("../../Abilities/PhysicalT1"), NodePath("../../Abilities/ChaosT1") ]
max_mana = 100

[node name="Enemy" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Abilities" type="Node2D" parent="."]

[node name="PhysicalT1" parent="Abilities" instance=ExtResource( 7 )]
id = 6

[node name="ColdT2" parent="Abilities" instance=ExtResource( 8 )]
id = 1

[node name="LightningT2" parent="Abilities" instance=ExtResource( 6 )]
id = 2

[node name="LightningT1" parent="Abilities" instance=ExtResource( 5 )]
id = 5

[node name="ColdT1" parent="Abilities" instance=ExtResource( 3 )]
id = 4

[node name="ChaosT1" parent="Abilities" instance=ExtResource( 4 )]
id = 7

[node name="FireT1" parent="Abilities" instance=ExtResource( 9 )]
id = 3

[node name="FireT2" parent="Abilities" instance=ExtResource( 10 )]
